--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-inject": "^4.3.0",
     "gulp-jshint": "^2.0.4",
     "gulp-nodemon": "^2.2.1",
+    "jade": "^1.11.0",
     "jshint": "^2.9.5",
     "wiredep": "^4.0.0"
   }
