--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jshint-stylish": "^2.2.1"
   },
   "devDependencies": {
+    "ejs": "^2.5.7",
     "express-handlebars": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-inject": "^4.3.0",
